chore: update package version to 0.1.3, add preview script, and modify docker command
- Bump version from 0.1.2 to 0.1.3 in package.json
- Add "preview" script to package.json
- Change docker command to use turbo
- Clean command updated to remove additional directories
- Update turbo dependency to version 2.7.5
- Update package manager version to bun@1.3.6
- Add @neondatabase/serverless dependency

chore: update turbo.json for build outputs and add new environment variable

- Modify build outputs to include .tanstack directory
- Add preview and docker tasks with cache settings
- Include BUN_VERSION in global environment variables

--- a/turbo.json
+++ b/turbo.json
@@ -5,11 +5,13 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": [".tanstack/**", "!.tanstack/cache/**"]
     },
     "lint": { "dependsOn": ["^lint"] },
     "check-types": { "dependsOn": ["^check-types"] },
     "dev": { "cache": false, "persistent": true },
+    "preview": { "cache": false, "persistent": true },
+    "docker": { "cache": false },
     "in": { "cache": false, "dependsOn": ["^in"] }
   },
   "globalEnv": [
@@ -49,6 +51,7 @@
     "KV_REST_API_URL",
     "KV_REST_API_TOKEN",
     "KV_REST_API_READ_ONLY_TOKEN",
-    "REDIS_URL"
+    "REDIS_URL",
+    "BUN_VERSION"
   ]
 }
