--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,35 +12,33 @@
     "db:push": "drizzle-kit push",
     "db:pull": "drizzle-kit pull",
     "db:studio": "drizzle-kit studio",
-    "docker": "sudo docker compose -f apps/web/docker-compose.yml up -d",
+    "docker": "docker compose -f docker-compose.yml up -d",
     "in": "bun i && bun update --latest"
   },
   "dependencies": {
-    "@base-ui/react": "^1.0.0",
+    "@base-ui/react": "^1.1.0",
     "@fontsource/bricolage-grotesque": "^5.2.10",
     "@hugeicons/core-free-icons": "^3.1.1",
     "@hugeicons/react": "^1.1.4",
     "@sapphire/snowflake": "^3.5.5",
     "@tailwindcss/vite": "^4.1.18",
-    "@tanstack/react-devtools": "^0.9.1",
-    "@tanstack/react-router": "1.145.11",
-    "@tanstack/react-router-devtools": "1.145.11",
-    "@tanstack/react-router-ssr-query": "1.145.11",
-    "@tanstack/react-start": "1.145.11",
-    "@tanstack/router-plugin": "1.145.11",
-    "@tiptap/extension-emoji": "^3.15.3",
-    "@tiptap/extension-image": "^3.15.3",
-    "@tiptap/extension-text-align": "^3.15.3",
-    "@tiptap/extension-text-style": "^3.15.3",
-    "@tiptap/extension-youtube": "^3.15.3",
-    "@tiptap/extensions": "^3.15.3",
-    "@tiptap/react": "^3.15.3",
-    "@tiptap/starter-kit": "^3.15.3",
+    "@tanstack/react-router": "1.154.10",
+    "@tanstack/react-router-ssr-query": "1.154.10",
+    "@tanstack/react-start": "1.154.10",
+    "@tanstack/router-plugin": "1.154.10",
+    "@tiptap/extension-emoji": "^3.16.0",
+    "@tiptap/extension-image": "^3.16.0",
+    "@tiptap/extension-text-align": "^3.16.0",
+    "@tiptap/extension-text-style": "^3.16.0",
+    "@tiptap/extension-youtube": "^3.16.0",
+    "@tiptap/extensions": "^3.16.0",
+    "@tiptap/react": "^3.16.0",
+    "@tiptap/starter-kit": "^3.16.0",
     "@unpic/react": "^1.0.2",
     "@vercel/mcp-adapter": "^1.0.0",
-    "better-auth": "^1.4.10",
+    "better-auth": "^1.4.17",
     "class-variance-authority": "^0.7.1",
-    "cloudinary": "^2.8.0",
+    "cloudinary": "^2.9.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "dotenv": "^17.2.3",
@@ -50,12 +48,12 @@
     "embla-carousel-react": "^8.6.0",
     "hashids": "^2.3.0",
     "next-themes": "^0.4.6",
-    "nitro": "^3.0.1-alpha.1",
+    "nitro": "^3.0.1-alpha.2",
     "nodemailer": "^7.0.12",
-    "obscenity": "^0.4.5",
+    "obscenity": "^0.4.6",
     "onnxruntime-web": "^1.23.2",
     "p-limit": "^7.2.0",
-    "pg": "^8.16.3",
+    "pg": "^8.17.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "redis": "^5.10.0",
@@ -65,24 +63,25 @@
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
     "vaul": "^1.1.2",
-    "vite-tsconfig-paths": "^6.0.3",
-    "zod": "^4.3.5"
+    "vite-tsconfig-paths": "^6.0.4",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tanstack/devtools-vite": "^0.4.1",
-    "@tanstack/eslint-config": "^0.3.4",
+    "@tanstack/react-devtools": "^0.9.2",
+    "@tanstack/react-router-devtools": "1.154.10",
     "@testing-library/dom": "^10.4.1",
-    "@testing-library/react": "^16.3.1",
-    "@types/node": "^25.0.3",
-    "@types/nodemailer": "^7.0.4",
+    "@testing-library/react": "^16.3.2",
+    "@types/node": "^25.0.10",
+    "@types/nodemailer": "^7.0.5",
     "@types/pg": "^8.16.0",
-    "@types/react": "^19.2.7",
+    "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
     "jsdom": "^27.4.0",
     "tsx": "^4.21.0",
     "vite": "^7.3.1",
-    "vitest": "^4.0.16",
+    "vitest": "^4.0.18",
     "web-vitals": "^5.1.0"
   }
 }
