--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
   "name": "metapress",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "author": "dhruvjangid",
   "description": "The Pulse of Creativity",
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
+    "preview": "turbo run preview",
     "lint": "turbo run lint",
     "check-types": "turbo run check-types",
-    "docker": "sudo docker compose -f apps/web/docker-compose.yml up -d",
-    "clean": "rm -rf apps/web/.output apps/web/.turbo apps/web/node_modules .husky/_ bun.lock .turbo node_modules",
+    "docker": "turbo docker -F web",
+    "clean": "rm -rf apps/web/.output apps/web/.turbo apps/web/node_modules apps/web/.tanstack apps/web/.vercel bun.lock .turbo node_modules",
     "in": "bun i && bun update --latest && turbo in -F web"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.11",
-    "turbo": "^2.7.3",
+    "turbo": "^2.7.5",
     "typescript": "5.9.3"
   },
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "bun@1.3.5",
-  "workspaces": ["apps/*", "packages/*"]
+  "packageManager": "bun@1.3.6",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
+  "dependencies": {
+    "@neondatabase/serverless": "^1.0.2"
+  }
 }
